--- a/កែប.html
+++ b/កែប.html
@@ -119,19 +119,19 @@
                      </ol>
                      <div class="carousel-inner">
                         <div class="carousel-item active">
-                           <img src="images/image travel /កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល 1.jpeg" class="d-block w-100 img-content-post" alt="...">
+                           <img src="images/image-travel/កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល 1.jpeg" class="d-block w-100 img-content-post" alt="...">
                         </div>
                         <div class="carousel-item">
-                           <img src="images/image travel /កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល1.jpeg" class="d-block w-100 img-content-post" alt="...">
+                           <img src="images/image-travel/កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល1.jpeg" class="d-block w-100 img-content-post" alt="...">
                         </div>
                         <div class="carousel-item">
-                           <img src="images/image travel /កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល2.jpeg" class="d-block w-100 img-content-post" alt="...">
+                           <img src="images/image-travel/កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល2.jpeg" class="d-block w-100 img-content-post" alt="...">
                         </div>
                         <div class="carousel-item">
-                           <img src="images/image travel /កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល3.jpeg" class="d-block w-100 img-content-post" alt="...">
+                           <img src="images/image-travel/កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល3.jpeg" class="d-block w-100 img-content-post" alt="...">
                         </div>
                         <div class="carousel-item">
-                           <img src="images/image travel /កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល4.jpeg" class="d-block w-100 img-content-post" alt="...">
+                           <img src="images/image-travel/កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល4.jpeg" class="d-block w-100 img-content-post" alt="...">
                         </div>
                      </div>
                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators" data-bs-slide="prev">
@@ -159,16 +159,16 @@
                      </ol>
                      <div class="carousel-inner">
                         <div class="carousel-item active">
-                           <img src="images/image travel /កែប/កោះទន្សាយ/កោះទន្សាយ1.jpeg" class="d-block w-100 img-content-post" alt="...">
+                           <img src="images/image-travel/កែប/កោះទន្សាយ/កោះទន្សាយ1.jpeg" class="d-block w-100 img-content-post" alt="...">
                         </div>
                         <div class="carousel-item">
-                           <img src="images/image travel /កែប/កោះទន្សាយ/កោះទន្សាយ2.jpeg" class="d-block w-100 img-content-post" alt="...">
+                           <img src="images/image-travel/កែប/កោះទន្សាយ/កោះទន្សាយ2.jpeg" class="d-block w-100 img-content-post" alt="...">
                         </div>
                         <div class="carousel-item">
-                           <img src="images/image travel /កែប/កោះទន្សាយ/កោះទន្សាយ3.jpeg" class="d-block w-100 img-content-post" alt="...">
+                           <img src="images/image-travel/កែប/កោះទន្សាយ/កោះទន្សាយ3.jpeg" class="d-block w-100 img-content-post" alt="...">
                         </div>
                         <div class="carousel-item">
-                           <img src="images/image travel /កែប/កោះទន្សាយ/កោះទន្សាយ4.jpeg" class="d-block w-100 img-content-post" alt="...">
+                           <img src="images/image-travel/កែប/កោះទន្សាយ/កោះទន្សាយ4.jpeg" class="d-block w-100 img-content-post" alt="...">
                         </div>
                      </div>
                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators1" data-bs-slide="prev">
@@ -201,25 +201,25 @@
                      </ol>
                      <div class="carousel-inner">
                         <div class="carousel-item active">
-                           <img src="images/image travel /កែប/សួនមេអំបៅ/សួនមេអំបៅ.jpeg" class="d-block w-100 img-content-post" alt="...">
+                           <img src="images/image-travel/កែប/សួនមេអំបៅ/សួនមេអំបៅ.jpeg" class="d-block w-100 img-content-post" alt="...">
                         </div>
                         <div class="carousel-item">
-                           <img src="images/image travel /កែប/សួនមេអំបៅ/សួនមេអំបៅ1.jpeg" class="d-block w-100 img-content-post" alt="...">
+                           <img src="images/image-travel/កែប/សួនមេអំបៅ/សួនមេអំបៅ1.jpeg" class="d-block w-100 img-content-post" alt="...">
                         </div>
                         <div class="carousel-item">
-                           <img src="images/image travel /កែប/សួនមេអំបៅ/សួនមេអំបៅ2.jpeg" class="d-block w-100 img-content-post" alt="...">
+                           <img src="images/image-travel/កែប/សួនមេអំបៅ/សួនមេអំបៅ2.jpeg" class="d-block w-100 img-content-post" alt="...">
                         </div>
                         <div class="carousel-item">
-                           <img src="images/image travel /កែប/សួនមេអំបៅ/សួនមេអំបៅ3.jpeg" class="d-block w-100 img-content-post" alt="...">
+                           <img src="images/image-travel/កែប/សួនមេអំបៅ/សួនមេអំបៅ3.jpeg" class="d-block w-100 img-content-post" alt="...">
                         </div>
                         <div class="carousel-item">
-                           <img src="images/image travel /កែប/សួនមេអំបៅ/សួនមេអំបៅ4.jpeg" class="d-block w-100 img-content-post" alt="...">
+                           <img src="images/image-travel/កែប/សួនមេអំបៅ/សួនមេអំបៅ4.jpeg" class="d-block w-100 img-content-post" alt="...">
                         </div>
                         <div class="carousel-item">
-                           <img src="images/image travel /កែប/សួនមេអំបៅ/សួនមេអំបៅ5.jpeg" class="d-block w-100 img-content-post" alt="...">
+                           <img src="images/image-travel/កែប/សួនមេអំបៅ/សួនមេអំបៅ5.jpeg" class="d-block w-100 img-content-post" alt="...">
                         </div>
                         <div class="carousel-item">
-                           <img src="images/image travel /កែប/សួនមេអំបៅ/សួនមេអំបៅ6.jpeg" class="d-block w-100 img-content-post" alt="...">
+                           <img src="images/image-travel/កែប/សួនមេអំបៅ/សួនមេអំបៅ6.jpeg" class="d-block w-100 img-content-post" alt="...">
                         </div>
                      </div>
                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators2" data-bs-slide="prev">
@@ -249,19 +249,19 @@
                      </ol>
                      <div class="carousel-inner">
                         <div class="carousel-item active">
-                           <img src="images/image travel /កែប/កាហ្វេលើភ្នំ/កាហ្វេលើភ្នំ.jpeg" class="d-block w-100 img-content-post" alt="...">
+                           <img src="images/image-travel/កែប/កាហ្វេលើភ្នំ/កាហ្វេលើភ្នំ.jpeg" class="d-block w-100 img-content-post" alt="...">
                         </div>
                         <div class="carousel-item">
-                           <img src="images/image travel /កែប/កាហ្វេលើភ្នំ/កាហ្វេលើភ្នំ1.jpeg" class="d-block w-100 img-content-post" alt="...">
+                           <img src="images/image-travel/កែប/កាហ្វេលើភ្នំ/កាហ្វេលើភ្នំ1.jpeg" class="d-block w-100 img-content-post" alt="...">
                         </div>
                         <div class="carousel-item">
-                           <img src="images/image travel /កែប/កាហ្វេលើភ្នំ/កាហ្វេលើភ្នំ2.jpeg" class="d-block w-100 img-content-post" alt="...">
+                           <img src="images/image-travel/កែប/កាហ្វេលើភ្នំ/កាហ្វេលើភ្នំ2.jpeg" class="d-block w-100 img-content-post" alt="...">
                         </div>
                         <div class="carousel-item">
-                           <img src="images/image travel /កែប/កាហ្វេលើភ្នំ/កាហ្វេលើភ្នំ3.jpeg" class="d-block w-100 img-content-post" alt="...">
+                           <img src="images/image-travel/កែប/កាហ្វេលើភ្នំ/កាហ្វេលើភ្នំ3.jpeg" class="d-block w-100 img-content-post" alt="...">
                         </div>
                         <div class="carousel-item">
-                           <img src="images/image travel /កែប/កាហ្វេលើភ្នំ/កាហ្វេលើភ្នំ4.jpeg" class="d-block w-100 img-content-post" alt="...">
+                           <img src="images/image-travel/កែប/កាហ្វេលើភ្នំ/កាហ្វេលើភ្នំ4.jpeg" class="d-block w-100 img-content-post" alt="...">
                         </div>
                      </div>
                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators3" data-bs-slide="prev">
