--- a/បាត់ដំបង.html
+++ b/បាត់ដំបង.html
@@ -118,19 +118,19 @@
                     </ol>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="images/image travel /បាត់ដំបង/ឡូរីជើងភ្នំបាណន់ /ឡូរីជើងភ្នំបាណន់1.jpg" class="d-block w-100 img-content-post" alt="...">
+                        <img src="images/image-travel/បាត់ដំបង/ឡូរីជើងភ្នំបាណន់ /ឡូរីជើងភ្នំបាណន់1.jpg" class="d-block w-100 img-content-post" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="images/image travel /បាត់ដំបង/ឡូរីជើងភ្នំបាណន់ /ឡូរីជើងភ្នំបាណន់2.jpg" class="d-block w-100 img-content-post" alt="...">
+                        <img src="images/image-travel/បាត់ដំបង/ឡូរីជើងភ្នំបាណន់ /ឡូរីជើងភ្នំបាណន់2.jpg" class="d-block w-100 img-content-post" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="images/image travel /បាត់ដំបង/ឡូរីជើងភ្នំបាណន់ /ឡូរីជើងភ្នំបាណន់3.jpg" class="d-block w-100 img-content-post" alt="...">
+                        <img src="images/image-travel/បាត់ដំបង/ឡូរីជើងភ្នំបាណន់ /ឡូរីជើងភ្នំបាណន់3.jpg" class="d-block w-100 img-content-post" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="images/image travel /បាត់ដំបង/ឡូរីជើងភ្នំបាណន់ /ឡូរីជើងភ្នំបាណន់4.jpg" class="d-block w-100 img-content-post" alt="...">
+                        <img src="images/image-travel/បាត់ដំបង/ឡូរីជើងភ្នំបាណន់ /ឡូរីជើងភ្នំបាណន់4.jpg" class="d-block w-100 img-content-post" alt="...">
                       </div>
                       <div class="carousel-item">
-                       <img src="images/image travel /បាត់ដំបង/ឡូរីជើងភ្នំបាណន់ /ឡូរីជើងភ្នំបាណន់5.jpg" class="d-block w-100 img-content-post" alt="...">
+                       <img src="images/image-travel/បាត់ដំបង/ឡូរីជើងភ្នំបាណន់ /ឡូរីជើងភ្នំបាណន់5.jpg" class="d-block w-100 img-content-post" alt="...">
                      </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators" data-bs-slide="prev">
@@ -160,19 +160,19 @@
                   </ol>
                   <div class="carousel-inner">
                      <div class="carousel-item active">
-                        <img src="images/image travel /បាត់ដំបង/ផ្ទះផ្កា Begonia/ផ្ទះផ្កា Begonia 1.jpg" class="d-block w-100 img-content-post" alt="...">
+                        <img src="images/image-travel/បាត់ដំបង/ផ្ទះផ្កា Begonia/ផ្ទះផ្កា Begonia 1.jpg" class="d-block w-100 img-content-post" alt="...">
                      </div>
                      <div class="carousel-item">
-                        <img src="images/image travel /បាត់ដំបង/ផ្ទះផ្កា Begonia/ផ្ទះផ្កា Begonia 2.jpg" class="d-block w-100 img-content-post" alt="...">
+                        <img src="images/image-travel/បាត់ដំបង/ផ្ទះផ្កា Begonia/ផ្ទះផ្កា Begonia 2.jpg" class="d-block w-100 img-content-post" alt="...">
                      </div>
                      <div class="carousel-item">
-                        <img src="images/image travel /បាត់ដំបង/ផ្ទះផ្កា Begonia/ផ្ទះផ្កា Begonia 3.jpg" class="d-block w-100 img-content-post" alt="...">
+                        <img src="images/image-travel/បាត់ដំបង/ផ្ទះផ្កា Begonia/ផ្ទះផ្កា Begonia 3.jpg" class="d-block w-100 img-content-post" alt="...">
                      </div>
                      <div class="carousel-item">
-                        <img src="images/image travel /បាត់ដំបង/ផ្ទះផ្កា Begonia/ផ្ទះផ្កា Begonia 4.jpg" class="d-block w-100 img-content-post" alt="...">
+                        <img src="images/image-travel/បាត់ដំបង/ផ្ទះផ្កា Begonia/ផ្ទះផ្កា Begonia 4.jpg" class="d-block w-100 img-content-post" alt="...">
                      </div>
                      <div class="carousel-item">
-                     <img src="images/image travel /បាត់ដំបង/ផ្ទះផ្កា Begonia/ផ្ទះផ្កា Begonia 5.jpg" class="d-block w-100 img-content-post" alt="...">
+                     <img src="images/image-travel/បាត់ដំបង/ផ្ទះផ្កា Begonia/ផ្ទះផ្កា Begonia 5.jpg" class="d-block w-100 img-content-post" alt="...">
                      </div>
                   </div>
                   <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators1" data-bs-slide="prev">
@@ -203,19 +203,19 @@
                   </ol>
                   <div class="carousel-inner">
                      <div class="carousel-item active">
-                        <img src="images/image travel /បាត់ដំបង/ទឹកធ្លាក់អូជាំ/ទឹកធ្លាក់អូជាំ 1.jpg" class="d-block w-100 img-content-post" alt="...">
+                        <img src="images/image-travel/បាត់ដំបង/ទឹកធ្លាក់អូជាំ/ទឹកធ្លាក់អូជាំ 1.jpg" class="d-block w-100 img-content-post" alt="...">
                      </div>
                      <div class="carousel-item">
-                        <img src="images/image travel /បាត់ដំបង/ទឹកធ្លាក់អូជាំ/ទឹកធ្លាក់អូជាំ 2.jpg" class="d-block w-100 img-content-post" alt="...">
+                        <img src="images/image-travel/បាត់ដំបង/ទឹកធ្លាក់អូជាំ/ទឹកធ្លាក់អូជាំ 2.jpg" class="d-block w-100 img-content-post" alt="...">
                      </div>
                      <div class="carousel-item">
-                        <img src="images/image travel /បាត់ដំបង/ទឹកធ្លាក់អូជាំ/ទឹកធ្លាក់អូជាំ 3.jpg" class="d-block w-100 img-content-post" alt="...">
+                        <img src="images/image-travel/បាត់ដំបង/ទឹកធ្លាក់អូជាំ/ទឹកធ្លាក់អូជាំ 3.jpg" class="d-block w-100 img-content-post" alt="...">
                      </div>
                      <div class="carousel-item">
-                        <img src="images/image travel /បាត់ដំបង/ទឹកធ្លាក់អូជាំ/ទឹកធ្លាក់អូជាំ 4.jpg" class="d-block w-100 img-content-post" alt="...">
+                        <img src="images/image-travel/បាត់ដំបង/ទឹកធ្លាក់អូជាំ/ទឹកធ្លាក់អូជាំ 4.jpg" class="d-block w-100 img-content-post" alt="...">
                      </div>
                      <div class="carousel-item">
-                        <img src="images/image travel /បាត់ដំបង/ទឹកធ្លាក់អូជាំ/ទឹកធ្លាក់អូជាំ 5.jpg" class="d-block w-100 img-content-post" alt="...">
+                        <img src="images/image-travel/បាត់ដំបង/ទឹកធ្លាក់អូជាំ/ទឹកធ្លាក់អូជាំ 5.jpg" class="d-block w-100 img-content-post" alt="...">
                      </div>
                   </div>
                   <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators2" data-bs-slide="prev">
@@ -253,19 +253,19 @@
                   </ol>
                   <div class="carousel-inner">
                      <div class="carousel-item active">
-                        <img src="images/image travel /បាត់ដំបង/​ស្ទឹងគ្រញូង/ស្ទឹងគ្រញូង 1.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        <img src="images/image-travel/បាត់ដំបង/​ស្ទឹងគ្រញូង/ស្ទឹងគ្រញូង 1.jpeg" class="d-block w-100 img-content-post" alt="...">
                      </div>
                      <div class="carousel-item">
-                        <img src="images/image travel /បាត់ដំបង/​ស្ទឹងគ្រញូង/ស្ទឹងគ្រញូង 2.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        <img src="images/image-travel/បាត់ដំបង/​ស្ទឹងគ្រញូង/ស្ទឹងគ្រញូង 2.jpeg" class="d-block w-100 img-content-post" alt="...">
                      </div>
                      <div class="carousel-item">
-                        <img src="images/image travel /បាត់ដំបង/​ស្ទឹងគ្រញូង/ស្ទឹងគ្រញូង 3.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        <img src="images/image-travel/បាត់ដំបង/​ស្ទឹងគ្រញូង/ស្ទឹងគ្រញូង 3.jpeg" class="d-block w-100 img-content-post" alt="...">
                      </div>
                      <div class="carousel-item">
-                        <img src="images/image travel /បាត់ដំបង/​ស្ទឹងគ្រញូង/ស្ទឹងគ្រញូង 4.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        <img src="images/image-travel/បាត់ដំបង/​ស្ទឹងគ្រញូង/ស្ទឹងគ្រញូង 4.jpeg" class="d-block w-100 img-content-post" alt="...">
                      </div>
                      <div class="carousel-item">
-                        <img src="images/image travel /បាត់ដំបង/​ស្ទឹងគ្រញូង/ស្ទឹងគ្រញូង 5.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        <img src="images/image-travel/បាត់ដំបង/​ស្ទឹងគ្រញូង/ស្ទឹងគ្រញូង 5.jpeg" class="d-block w-100 img-content-post" alt="...">
                      </div>
                   </div>
                   <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators3" data-bs-slide="prev">
