--- a/ព្រះសីហនុ.html
+++ b/ព្រះសីហនុ.html
@@ -120,19 +120,19 @@
                      </ol>
                      <div class="carousel-inner">
                        <div class="carousel-item active">
-                         <img src="images/image travel /ព្រះសីហនុ/ឆ្នេរខ្សាច់ស តាបារាំង/ឆ្នេរខ្សាច់ស តាបារាំង .jpeg" class="d-block w-100 img-content-post" alt="...">
+                         <img src="images/image-travel/ព្រះសីហនុ/ឆ្នេរខ្សាច់ស តាបារាំង/ឆ្នេរខ្សាច់ស តាបារាំង .jpeg" class="d-block w-100 img-content-post" alt="...">
                        </div>
                        <div class="carousel-item">
-                         <img src="images/image travel /ព្រះសីហនុ/ឆ្នេរខ្សាច់ស តាបារាំង/ឆ្នេរខ្សាច់ស តាបារាំង1.jpeg" class="d-block w-100 img-content-post" alt="...">
+                         <img src="images/image-travel/ព្រះសីហនុ/ឆ្នេរខ្សាច់ស តាបារាំង/ឆ្នេរខ្សាច់ស តាបារាំង1.jpeg" class="d-block w-100 img-content-post" alt="...">
                        </div>
                        <div class="carousel-item">
-                         <img src="images/image travel /ព្រះសីហនុ/ឆ្នេរខ្សាច់ស តាបារាំង/ឆ្នេរខ្សាច់ស តាបារាំង2.jpeg" class="d-block w-100 img-content-post" alt="...">
+                         <img src="images/image-travel/ព្រះសីហនុ/ឆ្នេរខ្សាច់ស តាបារាំង/ឆ្នេរខ្សាច់ស តាបារាំង2.jpeg" class="d-block w-100 img-content-post" alt="...">
                        </div>
                        <div class="carousel-item">
-                         <img src="images/image travel /ព្រះសីហនុ/ឆ្នេរខ្សាច់ស តាបារាំង/នេរខ្សាច់ស តាបារាំង3.jpeg" class="d-block w-100 img-content-post" alt="...">
+                         <img src="images/image-travel/ព្រះសីហនុ/ឆ្នេរខ្សាច់ស តាបារាំង/នេរខ្សាច់ស តាបារាំង3.jpeg" class="d-block w-100 img-content-post" alt="...">
                        </div>
                        <div class="carousel-item">
-                        <img src="images/image travel /ព្រះសីហនុ/ឆ្នេរខ្សាច់ស តាបារាំង/នេរខ្សាច់ស តាបារាំង4.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        <img src="images/image-travel/ព្រះសីហនុ/ឆ្នេរខ្សាច់ស តាបារាំង/នេរខ្សាច់ស តាបារាំង4.jpeg" class="d-block w-100 img-content-post" alt="...">
                       </div>
                      </div>
                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators" data-bs-slide="prev">
@@ -169,19 +169,19 @@
                     </ol>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="images/image travel /ព្រះសីហនុ//រមណីយដ្ឋាន ពិកនិក /រមណីយដ្ឋាន ពិកនិក .jpeg" class="d-block w-100 img-content-post" alt="...">
+                        <img src="images/image-travel/ព្រះសីហនុ//រមណីយដ្ឋាន ពិកនិក /រមណីយដ្ឋាន ពិកនិក .jpeg" class="d-block w-100 img-content-post" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="images/image travel /ព្រះសីហនុ/រមណីយដ្ឋាន ពិកនិក /រមណីយដ្ឋាន ពិកនិក1.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        <img src="images/image-travel/ព្រះសីហនុ/រមណីយដ្ឋាន ពិកនិក /រមណីយដ្ឋាន ពិកនិក1.jpeg" class="d-block w-100 img-content-post" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="images/image travel /ព្រះសីហនុ/រមណីយដ្ឋាន ពិកនិក /រមណីយដ្ឋាន ពិកនិក2.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        <img src="images/image-travel/ព្រះសីហនុ/រមណីយដ្ឋាន ពិកនិក /រមណីយដ្ឋាន ពិកនិក2.jpeg" class="d-block w-100 img-content-post" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="images/image travel /ព្រះសីហនុ/រមណីយដ្ឋាន ពិកនិក /រមណីយដ្ឋាន ពិកនិក3.jpeg" class="d-block w-100 img-content-post" alt="...">
+                        <img src="images/image-travel/ព្រះសីហនុ/រមណីយដ្ឋាន ពិកនិក /រមណីយដ្ឋាន ពិកនិក3.jpeg" class="d-block w-100 img-content-post" alt="...">
                       </div>
                       <div class="carousel-item">
-                       <img src="images/image travel /ព្រះសីហនុ/រមណីយដ្ឋាន ពិកនិក /រមណីយដ្ឋាន ពិកនិក4.jpeg" class="d-block w-100 img-content-post" alt="...">
+                       <img src="images/image-travel/ព្រះសីហនុ/រមណីយដ្ឋាន ពិកនិក /រមណីយដ្ឋាន ពិកនិក4.jpeg" class="d-block w-100 img-content-post" alt="...">
                      </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators1" data-bs-slide="prev">
