--- a/ពោធិ៍សាត់.html
+++ b/ពោធិ៍សាត់.html
@@ -118,19 +118,19 @@
                     </ol>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="images/image travel /ពោធិ៍សាត់/វាលវែង/វាលវែង​1.jpg" class="d-block w-100 img-content-post" alt="...">
+                        <img src="images/image-travel/ពោធិ៍សាត់/វាលវែង/វាលវែង​1.jpg" class="d-block w-100 img-content-post" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="images/image travel /ពោធិ៍សាត់/វាលវែង/វាលវែង2.jpg" class="d-block w-100 img-content-post" alt="...">
+                        <img src="images/image-travel/ពោធិ៍សាត់/វាលវែង/វាលវែង2.jpg" class="d-block w-100 img-content-post" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="images/image travel /ពោធិ៍សាត់/វាលវែង/វាលវែង3.jpg" class="d-block w-100 img-content-post" alt="...">
+                        <img src="images/image-travel/ពោធិ៍សាត់/វាលវែង/វាលវែង3.jpg" class="d-block w-100 img-content-post" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="images/image travel /ពោធិ៍សាត់/វាលវែង/វាលវែង4.jpg" class="d-block w-100 img-content-post" alt="...">
+                        <img src="images/image-travel/ពោធិ៍សាត់/វាលវែង/វាលវែង4.jpg" class="d-block w-100 img-content-post" alt="...">
                       </div>
                       <div class="carousel-item">
-                       <img src="images/image travel /ពោធិ៍សាត់/វាលវែង/វាលវែង5.jpg" class="d-block w-100 img-content-post" alt="...">
+                       <img src="images/image-travel/ពោធិ៍សាត់/វាលវែង/វាលវែង5.jpg" class="d-block w-100 img-content-post" alt="...">
                      </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators" data-bs-slide="prev">
