--- a/កំពង់ឆ្នាំង.html
+++ b/កំពង់ឆ្នាំង.html
@@ -128,19 +128,19 @@
                       </ol>
                       <div class="carousel-inner">
                          <div class="carousel-item active">
-                            <img src="images/image travel /កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល4.jpeg" class="d-block w-100 img-content-post" alt="...">
+                            <img src="images/image-travel/កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល4.jpeg" class="d-block w-100 img-content-post" alt="...">
                          </div>
                          <div class="carousel-item">
-                            <img src="images/image travel /កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល1.jpeg" class="d-block w-100 img-content-post" alt="...">
+                            <img src="images/image-travel/កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល1.jpeg" class="d-block w-100 img-content-post" alt="...">
                          </div>
                          <div class="carousel-item">
-                            <img src="images/image travel /កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល2.jpeg" class="d-block w-100 img-content-post" alt="...">
+                            <img src="images/image-travel/កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល2.jpeg" class="d-block w-100 img-content-post" alt="...">
                          </div>
                          <div class="carousel-item">
-                            <img src="images/image travel /កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល3.jpeg" class="d-block w-100 img-content-post" alt="...">
+                            <img src="images/image-travel/កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល3.jpeg" class="d-block w-100 img-content-post" alt="...">
                          </div>
                          <div class="carousel-item">
-                            <img src="images/image travel /កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល 1.jpeg" class="d-block w-100 img-content-post" alt="...">
+                            <img src="images/image-travel/កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល 1.jpeg" class="d-block w-100 img-content-post" alt="...">
                          </div>
                       </div>
                       <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators" data-bs-slide="prev">
@@ -168,16 +168,16 @@
                       </ol>
                       <div class="carousel-inner">
                          <div class="carousel-item active">
-                            <img src="images/image travel /កែប/កោះទន្សាយ/កោះទន្សាយ1.jpeg" class="d-block w-100 img-content-post" alt="...">
+                            <img src="images/image-travel/កែប/កោះទន្សាយ/កោះទន្សាយ1.jpeg" class="d-block w-100 img-content-post" alt="...">
                          </div>
                          <div class="carousel-item">
-                            <img src="images/image travel /កែប/កោះទន្សាយ/កោះទន្សាយ2.jpeg" class="d-block w-100 img-content-post" alt="...">
+                            <img src="images/image-travel/កែប/កោះទន្សាយ/កោះទន្សាយ2.jpeg" class="d-block w-100 img-content-post" alt="...">
                          </div>
                          <div class="carousel-item">
-                            <img src="images/image travel /កែប/កោះទន្សាយ/កោះទន្សាយ3.jpeg" class="d-block w-100 img-content-post" alt="...">
+                            <img src="images/image-travel/កែប/កោះទន្សាយ/កោះទន្សាយ3.jpeg" class="d-block w-100 img-content-post" alt="...">
                          </div>
                          <div class="carousel-item">
-                            <img src="images/image travel /កែប/កោះទន្សាយ/កោះទន្សាយ4.jpeg" class="d-block w-100 img-content-post" alt="...">
+                            <img src="images/image-travel/កែប/កោះទន្សាយ/កោះទន្សាយ4.jpeg" class="d-block w-100 img-content-post" alt="...">
                          </div>
                       </div>
                       <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators1" data-bs-slide="prev">
