--- a/ពោធិ៍សាត់.html
+++ b/ពោធិ៍សាត់.html
@@ -162,24 +162,20 @@
                       <li data-target="#carouselIndicators" data-bs-slide-to="1" aria-label="Slide 2"></li>
                       <li data-target="#carouselIndicators" data-bs-slide-to="2" aria-label="Slide 3"></li>
                       <li data-target="#carouselIndicators" data-bs-slide-to="3" aria-label="Slide 4"></li>
-                      <li data-target="#carouselIndicators" data-bs-slide-to="4" aria-label="Slide 5"></li>
                     </ol>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="images/image travel /ពោធិ៍សាត់/វាលវែង/វាលវែង​1.jpg" class="d-block w-100 img-content-post" alt="...">
+                        <img src="images/image-travel/ពោធិ៍សាត់/ទឹកធ្លាក់ច្រកល្អៀង/ទឹកធ្លាក់ច្រកល្អៀង1.jpeg" class="d-block w-100 img-content-post" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="images/image travel /ពោធិ៍សាត់/វាលវែង/វាលវែង2.jpg" class="d-block w-100 img-content-post" alt="...">
+                        <img src="images/image-travel/ពោធិ៍សាត់/ទឹកធ្លាក់ច្រកល្អៀង/ទឹកធ្លាក់ច្រកល្អៀង2.jpeg" class="d-block w-100 img-content-post" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="images/image travel /ពោធិ៍សាត់/វាលវែង/វាលវែង3.jpg" class="d-block w-100 img-content-post" alt="...">
+                        <img src="images/image-travel/ពោធិ៍សាត់/ទឹកធ្លាក់ច្រកល្អៀង/ទឹកធ្លាក់ច្រកល្អៀង3.jpeg" class="d-block w-100 img-content-post" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="images/image travel /ពោធិ៍សាត់/វាលវែង/វាលវែង4.jpg" class="d-block w-100 img-content-post" alt="...">
+                        <img src="images/image-travel/ពោធិ៍សាត់/ទឹកធ្លាក់ច្រកល្អៀង/ទឹកធ្លាក់ច្រកល្អៀង4.jpeg" class="d-block w-100 img-content-post" alt="...">
                       </div>
-                      <div class="carousel-item">
-                       <img src="images/image travel /ពោធិ៍សាត់/វាលវែង/វាលវែង5.jpg" class="d-block w-100 img-content-post" alt="...">
-                     </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators" data-bs-slide="prev">
                       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
