--- a/កំពង់ឆ្នាំង.html
+++ b/កំពង់ឆ្នាំង.html
@@ -128,19 +128,19 @@
                       </ol>
                       <div class="carousel-inner">
                          <div class="carousel-item active">
-                            <img src="images/image-travel/កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល4.jpeg" class="d-block w-100 img-content-post" alt="...">
+                            <img src="images/image-travel/កំពង់ឆ្នាំង/ទឹកធ្លាក់ស្រែអំពិល/ទឹកធ្លាក់ស្រែអំពិល​ 1.jpg" class="d-block w-100 img-content-post" alt="...">
                          </div>
                          <div class="carousel-item">
-                            <img src="images/image-travel/កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល1.jpeg" class="d-block w-100 img-content-post" alt="...">
+                            <img src="images/image-travel/កំពង់ឆ្នាំង/ទឹកធ្លាក់ស្រែអំពិល/ទឹកធ្លាក់ស្រែអំពិល 2.jpg" class="d-block w-100 img-content-post" alt="...">
                          </div>
                          <div class="carousel-item">
-                            <img src="images/image-travel/កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល2.jpeg" class="d-block w-100 img-content-post" alt="...">
+                            <img src="images/image-travel/កំពង់ឆ្នាំង/ទឹកធ្លាក់ស្រែអំពិល/ទឹកធ្លាក់ស្រែអំពិល 3.jpg" class="d-block w-100 img-content-post" alt="...">
                          </div>
                          <div class="carousel-item">
-                            <img src="images/image-travel/កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល3.jpeg" class="d-block w-100 img-content-post" alt="...">
+                            <img src="images/image-travel/កំពង់ឆ្នាំង/ទឹកធ្លាក់ស្រែអំពិល/ទឹកធ្លាក់ស្រែអំពិល 4.jpg" class="d-block w-100 img-content-post" alt="...">
                          </div>
                          <div class="carousel-item">
-                            <img src="images/image-travel/កែប/ឆ្នេរអង្កោល/ឆ្នេរអង្កោល 1.jpeg" class="d-block w-100 img-content-post" alt="...">
+                            <img src="images/image-travel/កំពង់ឆ្នាំង/ទឹកធ្លាក់ស្រែអំពិល/ទឹកធ្លាក់ស្រែអំពិល 5.jpg" class="d-block w-100 img-content-post" alt="...">
                          </div>
                       </div>
                       <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators" data-bs-slide="prev">
@@ -164,20 +164,16 @@
                          <li data-target="#carouselIndicators1" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></li>
                          <li data-target="#carouselIndicators1" data-bs-slide-to="1" aria-label="Slide 2"></li>
                          <li data-target="#carouselIndicators1" data-bs-slide-to="2" aria-label="Slide 3"></li>
-                         <li data-target="#carouselIndicators1" data-bs-slide-to="3" aria-label="Slide 4"></li>
                       </ol>
                       <div class="carousel-inner">
                          <div class="carousel-item active">
-                            <img src="images/image-travel/កែប/កោះទន្សាយ/កោះទន្សាយ1.jpeg" class="d-block w-100 img-content-post" alt="...">
+                            <img src="images/image-travel/កំពង់ឆ្នាំង/ទឹកជ្រោះអូរដារ/ទឹកជ្រោះអូរដារ1.jpeg" class="d-block w-100 img-content-post" alt="...">
                          </div>
                          <div class="carousel-item">
-                            <img src="images/image-travel/កែប/កោះទន្សាយ/កោះទន្សាយ2.jpeg" class="d-block w-100 img-content-post" alt="...">
+                            <img src="images/image-travel/កំពង់ឆ្នាំង/ទឹកជ្រោះអូរដារ/ទឹកជ្រោះអូរដារ2.jpeg" class="d-block w-100 img-content-post" alt="...">
                          </div>
                          <div class="carousel-item">
-                            <img src="images/image-travel/កែប/កោះទន្សាយ/កោះទន្សាយ3.jpeg" class="d-block w-100 img-content-post" alt="...">
-                         </div>
-                         <div class="carousel-item">
-                            <img src="images/image-travel/កែប/កោះទន្សាយ/កោះទន្សាយ4.jpeg" class="d-block w-100 img-content-post" alt="...">
+                            <img src="images/image-travel/កំពង់ឆ្នាំង/ទឹកជ្រោះអូរដារ/ទឹកជ្រោះអូរដារ3.jpeg" class="d-block w-100 img-content-post" alt="...">
                          </div>
                       </div>
                       <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators1" data-bs-slide="prev">
