--- a/seemore.html
+++ b/seemore.html
@@ -28,7 +28,10 @@
   <body>
     <nav id="menu-navbar">
       <div id="navbar-content-wrapper">
-        <div id="right-side-menu" class="d-flex justify-content-between align-items-center">
+        <div
+          id="right-side-menu"
+          class="d-flex justify-content-between align-items-center"
+        >
           <a href="index.html" id="home">
             <i class="fa-solid fa-house-chimney"></i>
           </a>
@@ -37,40 +40,42 @@
               ខេត្ត/តំបន់
               <div class="sub-menu-dropdown">
                 <ul>
-                  <li>ភ្នំពេញ</li>
-                  <li>បាត់ដំបង</li>
-                  <li>សៀមរាប</li>
-                  <li>ពោធិ៍សាត់</li>
-                  <li>ព្រៃវែង</li>
-                  <li>ស្វាយរៀង</li>
-                  <li>កំពង់ឆ្នាំង</li>
-                  <li>កំពត</li>
-                  <li>កំពង់ធំ</li>
-                  <li>តាកែវ</li>
-                  <li>មណ្ឌលគិរី</li>
-                  <li>រតនៈគិរី</li>
-                  <li>ឧត្ដមានជ័យ</li>
-                  <li>កែប</li>
-                  <li>ស្ទឹងត្រែង</li>
-                  <li>ព្រះវិហារ</li>
-                  <li>កោះកុង</li>
-                  <li>ព្រះសីហនុ</li>
-                  <li>កំពង់ស្ពឺ</li>
-                  <li>កំពង់ចាម</li> 
-                  <li>បន្ទាយមានជ័យ</li>
-                  <li>កណ្ដាល</li>
-                  <li>ក្រចេះ</li>
-                  <li>ប៉ៃលិន</li>
-                  <li>ត្បូងឃ្មុំ</li>
-                  <li>ស្វាយ</li>
+                  <!-- Why not like below command ?????? -->
+                  <!-- <li> <a href="ភ្នំពេញ.html">ភ្នំពេញ</a> </li> -->
+
+                  <a href="ភ្នំពេញ.html"><li>ភ្នំពេញ</li></a>
+                  <a href="កំពត.html"><li>កំពត</li></a>
+                  <a href="កែប.html"><li>កែប</li></a>
+                  <a href="ព្រះសីហនុ.html"><li>ព្រះសីហនុ</li></a>
+                  <a href="កំពង់ឆ្នាំង.html"><li>កំពង់ឆ្នាំង</li></a>
+                  <a href="ពោធិ៍សាត់.html"><li>ពោធិ៍សាត់</li></a>
+                  <a href="បាត់ដំបង.html"><li>បាត់ដំបង</li></a>
+                  <a href="ប៉ៃលិន.html"><li>ប៉ៃលិន</li></a>
+                  <a href="បន្ទាយមានជ័យ.html"><li>បន្ទាយមានជ័យ</li></a>
+                  <a href="សៀមរាប.html"><li>សៀមរាប</li></a>
+                  <a href="កំពង់ធំ.html"><li>កំពង់ធំ</li></a>
+                  <a href="កំពង់ចាម.html"><li>កំពង់ចាម</li> </a>
+                  <a href="ព្រៃវែង.html"><li>ព្រៃវែង</li></a>
+                  <a href="ស្វាយរៀង.html"><li>ស្វាយរៀង</li></a>
+                  <a href="តាកែវ.html"><li>តាកែវ</li></a>
+                  <a href="កណ្ដាល.html"><li>កណ្ដាល</li></a>
+                  <a href="កំពង់ស្ពឺ.html"><li>កំពង់ស្ពឺ</li></a>
+                  <a href="ក្រចេះ.html"><li>ក្រចេះ</li></a>
+                  <a href="ស្ទឹងត្រែង.html"><li>ស្ទឹងត្រែង</li></a>
+                  <a href="មណ្ឌលគិរី.html"><li>មណ្ដលគិរី</li></a>
+                  <a href="ព្រះវិហារ.html"><li>ព្រះវិហារ</li></a>
+                  <a href="រតនៈគិរី.html"><li>រតនៈគិរី</li></a>
+                  <a href="កោះកុង.html"><li>កោះកុង</li></a>
+                  <a href="ឧត្ដមានជ័យ.html"><li>ឧត្ដមានជ័យ</li></a>
+                  <a href="ត្បូងឃ្មុំ.html"><li>ត្បូងឃ្មុំ</li></a>
                 </ul>
               </div>
             </li>
-            <li>សណ្ឋាគារ</li>
+            <li><a href="សណ្ឋាគារ.html"  style="color:inherit; transition: none;">សណ្ឋាគារ</a></li>
             <li>រថយន្ត</li>
             <li>រថយន្តក្រុង</li>
-            <li>ជើងហោះហើរ</li>
-            <li>អាហារ</li>
+            <li> <a href="./flight_schedule.html"  style="color:inherit; transition: none;">ជើងហោះហើរ</a></li>
+            <li> <a href="#food-footer" style="color:inherit; transition: none;">អាហារ</a> </li>
           </ul>
         </div>
         <img id="angkor-logo" src="images/angkor_wat_logo.png" alt="Cambodia">
