--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               placeholder="ស្វែងរកទីកម្សាន្តនានា"
             />
           </div>
-          <a href="" class="about-us">អំពីយើង</a>
+          <a href="Demo_aboutus.html" class="about-us">អំពីយើង</a>
           <a href="#contact-footer" class="contact-us">ទំនាក់ទំនង់</a>
           <!-- Theme mode Dark/Light -->
           <input type="checkbox" name="theme-mode" id="theme-mode" />
