--- a/ពោធិ៍សាត់.html
+++ b/ពោធិ៍សាត់.html
@@ -188,6 +188,7 @@
                   </div>
                </div>
                <!-- End Bootstrap Slide View -->
+               </div>
                <br>
                 <p class="text-description">ទឹកធ្លាក់ច្រកល្អៀង ជារមណីយដ្ឋានទេសចរណ៍បែបធម្មជាតិ មានសក្តានុពលទេសចរណ៍សំខាន់ៗដូចជារុក្ខជាតិដើមឈើធំៗ ខ្ពស់ៗ ទឹកធ្លាក់ថ្លាត្រជាក់ ផ្ទាំងថ្មធំៗ ជម្រកសត្វព្រៃ ខ្លា ស្វា ទោច….។ ភ្ញៀវទេសចរអាចសម្រាកលំហែ ងូតទឹក មើលទេសភាព។មានទីតាំងស្ថិតនៅក្នុងភូមិបំណក់ ឃុំឈើតុំ ស្រុកក្រគរ ដែលមានចំងាយប្រមាណជា៧៣គីឡូម៉ែត្រ ពីទីរួមខេត្តពោធិ៍សាត់។</p>
                 
